--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -138,6 +138,9 @@ jobs:
       - name: Import accounts with legacy binary
         working-directory: ./docker/localnet/generate-network
         run: bash import-keys.sh
+        env:
+          INPUT_FILE: "accounts.csv"
+          CHEQD_NODED_KEYRING_BACKEND: "test"
 
       # - name: Login to GitHub Container Registry
       #   uses: docker/login-action@v2
