--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -127,8 +127,7 @@ jobs:
           echo "INSTALLED_VERSION=$(cheqd-noded version)" >> "$GITHUB_OUTPUT"
 
       - name: Generate localnet config with legacy binary
-        working-directory: ./docker/localnet/generate-network
-        run: bash gen-network-config.sh
+        run: bash scripts/generate-localnet-config.sh "$CHAIN_ID" "$VALIDATORS_COUNT" "$SEEDS_COUNT" "$OBSERVERS_COUNT"
         env:
           CHAIN_ID: "cheqd"
           VALIDATORS_COUNT: 4
@@ -136,10 +135,9 @@ jobs:
           OBSERVERS_COUNT: 1
       
       - name: Import accounts with legacy binary
-        working-directory: ./docker/localnet/generate-network
-        run: bash import-keys.sh
+        run: bash scripts/import-keys.sh "$INPUT_FILE" "$CHEQD_NODED_KEYRING_BACKEND"
         env:
-          INPUT_FILE: "accounts.csv"
+          INPUT_FILE: "./docker/localnet/config/accounts.csv"
           CHEQD_NODED_KEYRING_BACKEND: "test"
 
       # - name: Login to GitHub Container Registry
