--- a/docker/localnet/config/compose-env/build-latest.env
+++ b/docker/localnet/config/compose-env/build-latest.env
@@ -4,6 +4,6 @@
 ###             REQUIRED: Node/network selection           ###
 ###############################################################
 # Define cheqd-noded image source. Change if using your own build.
-BUILD_IMAGE_VERSION="build-latest"
+BUILD_VERSION="build-latest"
 
-BUILD_IMAGE="cheqd/cheqd-node:$BUILD_IMAGE_VERSION"
+BUILD_IMAGE="cheqd/cheqd-node:$BUILD_VERSION"
