--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -127,7 +127,8 @@ jobs:
           echo "INSTALLED_VERSION=$(cheqd-noded version)" >> "$GITHUB_OUTPUT"
 
       - name: Generate localnet config with legacy binary
-        run: bash scripts/generate-localnet-config.sh "$CHAIN_ID" "$VALIDATORS_COUNT" "$SEEDS_COUNT" "$OBSERVERS_COUNT"
+        working-directory: ./scripts
+        run: bash generate-localnet-config.sh "$CHAIN_ID" "$VALIDATORS_COUNT" "$SEEDS_COUNT" "$OBSERVERS_COUNT"
         env:
           CHAIN_ID: "cheqd"
           VALIDATORS_COUNT: 4
@@ -135,7 +136,8 @@ jobs:
           OBSERVERS_COUNT: 1
       
       - name: Import accounts with legacy binary
-        run: bash scripts/import-keys.sh "$INPUT_FILE" "$CHEQD_NODED_KEYRING_BACKEND"
+        working-directory: ./scripts
+        run: bash import-keys.sh "$INPUT_FILE" "$CHEQD_NODED_KEYRING_BACKEND"
         env:
           INPUT_FILE: "./docker/localnet/config/accounts.csv"
           CHEQD_NODED_KEYRING_BACKEND: "test"
