--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,11 +86,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # - name: "Test interactive installer"
-      #   working-directory: ./installer
-      #   run: |
-      #     sudo bash -c "python3 installer.py < answers.txt"
+      - name: "Test interactive installer"
+        working-directory: ./installer
+        run: |
+          sudo bash -c "python3 installer.py < answers.txt"
 
       - name: Debugging with tmate
-        # if: ${{ failure() }}
+        if: ${{ failure() }}
         uses: mxschmitt/action-tmate@v3.13
+        with:
+          timeout-minutes: 15
