--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,7 +81,7 @@ jobs:
 
   interactive-installer:
     name: "Interactive Installer"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
   
     steps:
       - uses: actions/checkout@v3
